--- a/CSS/Estilo2.css
+++ b/CSS/Estilo2.css
@@ -13,77 +13,6 @@ body,p {
 	border: 0;	
 	overflow: hidden;
 	}
-
-ul{	
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    background: #FFD31D;
-    align-items: center;
-	text-align: center;
-	font-family: 'Titulos
-  }
-  ul li {
-    display: block;
-    position: relative;
-    float: left;
-    background: #FFD31D;
-  }
-  li ul { display: none; }
-  
-  ul li a {
-    display: block;
-    padding: 1em;
-    text-decoration: none;
-    white-space: nowrap;
-    color: #fff;
-  }
-  
-  ul li a:hover { background: #FF7272; }
-  
-  li:hover > ul {
-    display: block;
-    position: absolute;
-  }
-  
-  li:hover li { float: none; }
-  
-  li:hover a { background: #FFB385; }
-  
-  li:hover li a:hover { background: #FFB385; }
-  
-  .main-navigation li ul li { border-top: 0; }
-  
-
-  ul ul ul {
-    left: 100%;
-    top: 0;
-  }
-  ul:before,
-  ul:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
-  }
-  ul:after { clear: both; }
-  .center{
-    float:none;
-    display:inline-block;
-    align-content: center;
-  }
-  .right{
-	float:none;
-    display:inline-block;
-    align-content: right;
-  }
-  .main-navigation{
-    position: fixed;
-      top: 0;
-      width: 100%;
-      z-index: 1;
-  }
-grande{
-	font-size: large;
-}
 	
 h2,h3{
 	margin-top: 0.15em;
@@ -110,95 +39,94 @@ a:hover{
 	}
 	
 /*menu*/
-.navbar {
-	text-align:center;
-	color:white;
-  overflow: hidden;
-  background-color: #FFD31D;
-}
 
-.navbar a {
-	text-align:center;
-	height:21px;
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.dropdown{
-	width:45.6%;
-	height:48px;
-  float: left;
-  overflow: hidden;
-  font-size: 16px;
-	text-align:center;
-  border: none;
-  outline: none;
-  color: white;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.dropbtn {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  text-align: center;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-
-.navbar a:hover:not(.active){
-	text-align:center;
-  background-color: #FFB385;
-}
-
-.dropdown:hover:not(.active) .dropbtn:hover:not(.active) {
+ul{	
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    background: #FFD31D;
+    align-items: center;
 	text-align: center;
-  background-color: #FFB385;
-  width:100%;
-}
-
-.dropdown-content {
-	color:white;
-  display: none;
-  position: absolute;
-  background-color: #FFD31D;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-	color:white;
-  float: none;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: center;
-}
-
-.dropdown-content a:hover:not(.active) {
-  background-color: #FFB385;
-}
-
-.dropdown:hover .dropdown-content:hover:not(.active) {
-  display: block;
-}
-
-.active{
-	font-family: 'Links';
-	background-color:#FF7272;
-	width: relative;
+	font-family: 'Titulos';
+  }
+ 
+ul li {
+    display: block;
+    position: relative;
+    float: left;
+    background: #FFD31D;
+  }
+  li ul { display: none; }
+  
+ul li a {
+	font-size:20px;
+    display: block;
+    padding: 1em;
+    text-decoration: none;
+    white-space: nowrap;
+    color: #fff;
+  }
+  
+ul li a:hover {
+	 background: #FF7272;
+	 }
+  
+li:hover > ul {
+    display: block;
+    position: absolute;
+  }
+  
+li:hover li {
+	  float: none;
+	  }
+  
+li:hover a {
+	background: #FFB385;
 	}
+  
+li:hover li a:hover {
+	background: #FFB385;
+	}
+  
+.main-navigation li ul li {
+	border-top: 0;
+	}
+  
 
+ul ul ul {
+    left: 100%;
+    top: 0;
+  }
+  
+ul:before,
+ul:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+  }
+  
+ul:after {
+	clear: both;
+	}
+	
+.center{
+    float:none;
+    display:inline-block;
+    align-content: center;
+  }
+  
+.right{
+	float:none;
+    display:inline-block;
+    align-content: right;
+  }
+  
+.main-navigation{
+    position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1;
+  }
+	
 /*imagenes*/
 	img{
 		border-radius:10%;
